--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <script src="/script.js" type="module"></script>
   </head>
   <body>
-    <!-- <div class="loading-screen">
+    <div class="loading-screen">
       <a href="#" class="nav__logo--loading"
         ><span class="logo__x--loading">X</span><span class="logo__rest--loading">STATIC</span></a
       >
-    </div> -->
+    </div>
     <div class="container">
       <nav>
         <a href="index.html" class="nav__logo"><span class="logo__x">X</span><span class="logo__rest">STATIC</span></a>
@@ -97,7 +97,7 @@
         </div>
       </main></div>
       <section class="section__lineup">
-        <img class="label-logo" src="/Assets/afterlife-falling-man.svg" alt="">
+        <img class="falling-man" src="/Assets/afterlife-falling-man.svg" alt="">
       </section>
     </div>
   </body>
